# FFmpegPlayer

app/: build.gradle
app/src/androidTest/java/com/building/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp
app/src/main/cpp/player/: FFmpegPlayer.cpp  FFmpegPlayer.h
app/src/main/cpp/player/decoder/: Decoder.h  DecoderBase.cpp  DecoderBase.h
app/src/main/cpp/player/decoder/audio/: AudioDecoder.cpp  AudioDecoder.h
app/src/main/cpp/player/decoder/video/: VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/util/: ImageUtil.h  LogUtil.h
app/src/main/java/com/building/ffmpegplayer/: ANativePlayerActivity.kt  CommonUtils.java  FFmpegPlayer.java  IPlayerListener.kt  MainActivity.kt  NativeBrigde.java  OpenGLActivity.kt
app/src/main/res/layout/: activity_a_native_player.xml  activity_main.xml  activity_open_gl_window.xml
app/src/test/java/com/building/ffmpegplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
